--- a/src/main/resources/static/styles/popup.css
+++ b/src/main/resources/static/styles/popup.css
@@ -21,6 +21,42 @@
     text-align: center;
 }
 
+.infoPopupText
+{
+    visibility: hidden;
+    width: 20vw;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    z-index: 2;
+    margin-left:-10vw;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.infoPopup:hover .infoPopupText
+{
+    visibility: visible;
+    opacity: 1;
+}
+
+.infoPopupText::after
+{
+    content: " ";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent black transparent;
+}
+
 /* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn
 {
