--- a/src/main/resources/templates/payment/test.html
+++ b/src/main/resources/templates/payment/test.html
@@ -5,6 +5,7 @@
     <title>Payment</title>
     <link th:href="@{/styles/payment.css}" rel="stylesheet">
     <script th:src="@{/js/payment.js}"></script>
+    <script th:src="@{/js/cookiePrompt.js}"></script>
 </head>
 <body onload="updateHash()">
 <form action="https://pay.nordeaconnect.com/v1/form" method="post">
