--- a/src/main/resources/templates/profile/accountInfo.html
+++ b/src/main/resources/templates/profile/accountInfo.html
@@ -10,6 +10,7 @@
     <link th:href="@{/styles/profile.css}" rel="stylesheet">
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/basket.js}"></script>
+    <script th:src="@{/js/cookiePrompt.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
