--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -11,12 +11,30 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/basket.js}"></script>
+    <script th:src="@{/js/cookiePrompt.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
 <section id="navigationContainer">
+    <!-- cookie prompt modal -->
+    <div id="cookiePromptModalContainer">
+        <div class="modal fade" id="cookiePromptModal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="header">
+                        <h2 class="modal-title">Cookies information</h2>
+                        <p>Lorem ipsum thing <a href="">terms and conditions.</a></p>
+                    </div>
+                    <button type="button" onclick="acceptCookies()" id="acceptCookiesButton" >I ACCEPT</button>
+                </div>
+            </div>
+        </div>
+        <div id="cookieCover"></div>
+        <script>validateCookies();</script>
+    </div>
 
     <div id="popupContainer" class="popupContainer">
         <div id="popup" class="popup"><p id="popupText">Welcome Back!</p></div>
