--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -61,6 +61,8 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
     (document, 'script', 'facebook-jssdk'));
 </script>
 
+<script>isMobile()</script>
+
 <!-- End of Load FaceBook SDK for JavaScript -->
 
 <section id="contentContainer">
