--- a/src/main/resources/templates/payment/basket.html
+++ b/src/main/resources/templates/payment/basket.html
@@ -88,7 +88,7 @@
                         <input id="termsAndConditionsCheckbox" name="termsAndConditions" type="checkbox" required>
                         I have read the <a href="/termsAndConditions" target="_blank">Terms and Conditions</a>
                     </label>
-                    <button onclick='pay()'>Accept Order & Pay</button>
+                    <button onclick='goToPayment()'>Accept Order & Pay</button>
                 </div>
             </section>
         </div>
