--- a/src/main/resources/static/styles/basket.css
+++ b/src/main/resources/static/styles/basket.css
@@ -13,7 +13,8 @@
     justify-content: center;
     align-items: center;
     min-height: 64vh;
-    margin: 5vh 0;
+    padding-top: 10vh;
+    margin-bottom: 5vh;
 }
 
 #basketContainer
