--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div id="signupPopupModalContainer" class="popupContainer">
-            <div id="signupPopupModal" class="popup"><p id="signupPopupModalText">Welcome Back!</p></div>
+            <div id="signupPopupModal" class="popup"><p id="signupPopupModalText">Welcome !</p></div>
         </div>
     </div>
 
