--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -59,7 +59,7 @@
                 <input type="password" th:name="password" id="loginPassword" placeholder="Type your password . . ."
                        maxlength="60" required>
                 <hr>
-                <a type="button" name="forgotPassword" id="forgotPassword">Forgot password?</a><br>
+                <a type="button" href="/forgotPassword" name="forgotPassword" id="forgotPassword">Forgot password?</a><br>
 
                 <button type="button" onclick="submitLogin()" id="loginSubmitButton">login</button>
                 <br><br>
