--- a/src/main/resources/templates/profile/resetPassword.html
+++ b/src/main/resources/templates/profile/resetPassword.html
@@ -22,6 +22,7 @@
     <div id="content">
         <div id="productContainer">
             <div id="product" style="display: flex; flex-direction: column">
+                <h2>Reset Password</h2>
                 <input type="hidden" id="resetId" th:value="${resetId}">
                 <input type="hidden" id="resetToken" th:value="${resetToken}">
                 <label for="newPasswordInput" style="font-size: var(--fontRegular)">New password:</label>
@@ -30,7 +31,8 @@
                 <label for="newPasswordInput2" style="font-size: var(--fontRegular)">Repeat password:</label>
                 <input type="password" id="newPasswordInput2" class="forgotInput" maxlength="64"
                        placeholder="Repeat password...">
-                <input type="submit" value="Update password" id="updatePasswordBtn" onclick="updatePassword()">
+                <input type="submit" value="Update password" id="updatePasswordBtn" class="forgotSubmit"
+                       onclick="updatePassword()">
             </div>
             <script>
                 function updatePassword()
