--- a/src/main/resources/static/styles/forgotPassword.css
+++ b/src/main/resources/static/styles/forgotPassword.css
@@ -7,7 +7,7 @@
     border: 1px black solid;
 }
 
-#forgotSubmitBtn
+.forgotSubmit
 {
     margin: 1vh;
     padding: 0.5vh;
@@ -16,4 +16,5 @@
     border: none;
     border-radius: 5px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    font-size: var(--fontRegular);
 }
