--- a/src/main/resources/templates/profile/forgotPassword.html
+++ b/src/main/resources/templates/profile/forgotPassword.html
@@ -23,8 +23,10 @@
         <div id="productContainer">
             <div id="product" style="display: flex; flex-direction: column">
                 <label for="forgotInputEmail" style="font-size: var(--fontRegular)">Your email:</label>
-                <input type="email" id="forgotInputEmail" class="forgotInput" maxlength="255" placeholder="Your email...">
-                <input type="submit" value="Send password reset link" id="forgotSubmitBtn" onclick="sendPasswordResetRequest()">
+                <input type="email" id="forgotInputEmail" class="forgotInput" maxlength="255"
+                       placeholder="Your email...">
+                <input type="submit" value="Send password reset link" id="forgotSubmitBtn" class="forgotSubmit"
+                       onclick="sendPasswordResetRequest()">
             </div>
             <script>
                 function sendPasswordResetRequest()
