--- a/src/main/resources/templates/home/cookieTermsAndConditionsDanish.html
+++ b/src/main/resources/templates/home/cookieTermsAndConditionsDanish.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Cookie promt</title>
 </head>
-<body>
+<body style="background-color: #f2f2f2; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div style="max-width: 40em; margin: auto; padding: 5vh 0; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff;">
     <h1> Cookie- og privatlivspolitik </h1>
     <br>
     <h3>Introduktion</h3>
@@ -119,6 +120,9 @@
         Telefon: 26 19 23 27 <br>
         Email: info@treecreate.dk
     </p>
-
+    <p>
+        Sidst opdateret: 30.10.2020
+    </p>
+</div>
 </body>
 </html>
