--- a/src/main/resources/templates/home/orderTermsAndConditionsDanish.html
+++ b/src/main/resources/templates/home/orderTermsAndConditionsDanish.html
@@ -157,9 +157,15 @@
     Med venlig hilsen,
     Treecreate
     </p>
+    <h3>Udgiver</h3>
     <p>
-    Bestyrelsen:
-    Teodor Jonasson
+        <Strong>Websitet ejes og publiceres af: </Strong><br><br>
+        Treecreate - Ejer: Teodor Jonasson <br>
+        Addresse: Hillerødgade 69, 3.<br>
+        Post nr: 2200 <br>
+        By: København <br>
+        Telefon: 26 19 23 27 <br>
+        Email: info@treecreate.dk
     </p>
     <p>
     Sidst opdateret: 30.10.2020
