--- a/src/main/resources/templates/payment/basket.html
+++ b/src/main/resources/templates/payment/basket.html
@@ -86,7 +86,7 @@
                 <div id="acceptOrder" class="border">
                     <label for="termsAndConditionsCheckbox">
                         <input id="termsAndConditionsCheckbox" name="termsAndConditions" type="checkbox" required>
-                        I have read the <a href="/termsAndConditions" target="_blank">Terms and Conditions</a>
+                        I have read the <a href="/orderTermsAndConditionsDanish" target="_blank">Terms and Conditions</a>
                     </label>
                     <button onclick='goToPayment()'>Accept Order & Pay</button>
                 </div>
