--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -26,7 +26,9 @@
                 <div class="modal-content">
                     <div class="header">
                         <h2 class="modal-title">Cookies information</h2>
-                        <p>Lorem ipsum thing <a href="">terms and conditions.</a></p>
+                        <p>By clicking ACCEPT, you are agreeing with the cookie
+                            <a href="/cookieTermsAndConditionsDanish" id="cookieTerms" target="_blank">terms and conditions</a>
+                            of this page.</p>
                     </div>
                     <button type="button" onclick="acceptCookies()" id="acceptCookiesButton" >I ACCEPT</button>
                 </div>
