--- a/src/main/resources/static/styles/cookiePrompt.css
+++ b/src/main/resources/static/styles/cookiePrompt.css
@@ -1,32 +1,3 @@
-#cookiePromptModal
-{
-    width: 90%;
-    color: black;
-    background-color: white;
-    border-radius: 20px; 
-    z-index: 102;
-    position: fixed;       
-}
-
-#cookiePromptModalContainer
-{
-    display: flex;
-    justify-content: center;
-    padding-top: 1vh; 
-}
-
-#cookieCover
-{
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(0,0,0,0.4);
-    z-index: 101;
-    width: 100%;
-    height: 100%;
-}
-
 #cookiePromptModal h2
 {
     font-size: 48px;
@@ -38,13 +9,13 @@
     margin: 0 0 0 2vh;
 }
 
-#cookiePromptModal a
+#cookieTerms a
 {
     color: var(--textColor);
     text-decoration: underline;
 }
 
-#cookiePromptModal a:hover
+#cookieTerms a:hover
 {
     color: var(--actionColor);
 }
