--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -70,7 +70,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
         <!--<div id="popupContainer" class="popupContainer">
             <div id="popup" class="popup"><p id="popupText">Welcome Back!</p></div>
         </div>-->
-        <!-- Login modal -->
+        <!-- basket modal -->
         <div class="modal fade" id="addToBasketModal" role="dialog">
             <div class="modal-dialog" id="addToBasketContainer">
                 <section id="addToBasketHeader">
