--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -94,6 +94,15 @@
                        maxlength="60" required>
                 <hr>
 
+                <!-- T&C for account creation -->
+                <div style="display: flex; flex-direction: row;">
+                    <p style="font-size:12px;">By checking the box you are accepting the <a
+                           href="https://docs.google.com/document/d/1lMEzya3HeEzvLG6wwDYhAw0memVBxNc8J3q-4sJN-u8/edit"
+                           style="color:var (--mainSoftColor);" id="accountTermsAndConditions"
+                           target="_blank">terms and conditions</a> of creating a user: </p>
+                    <input style="width:20%!important;"type="checkbox" class="switch-input" id="fontSizeInput">
+                </div>
+
                 <button type="button" onclick="registerUser()" id="createAccountButton">Create account</button>
                 <br>
 
