--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -155,6 +155,8 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                 <div id="familyTreeDesignContainer">
                     <div id="draggableBoxContainer">
                         <div class="draggableBox">
+                            <input type="hidden" class="creationCursorX" value="0">
+                            <input type="hidden" class="creationCursorY" value="0">
                             <div class="draggableBoxUpperRow">
                                 <div class="deleteDraggableBoxButton" onclick="deleteBox(this)"></div>
                             </div>
